--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,15 @@ keywords = ["virtual", "keyboard", "mouse"]
 readme = "README.md"
 license = {file = "LICENSE"}
 
+
 # 这种不能直接把一个单独的文件作为命令安装
 #[project.scripts]
 #ckeckkey = "ckechkey"
 #list-inputs = "list-inputs"
+
+[scripts]
+ckeckkey = ["ckechkey.py"]
+list-inputs = ["list-inputs.py"]
 
 [project.urls]
 Homepage="https://github.com/calllivecn/keyboardmouse"
