--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,11 @@ classifiers = [
 
 
 # 这种不能直接把一个单独的文件作为命令安装
-#[project.scripts]
-#ckeckkey = "ckechkey"
-#list-inputs = "list-inputs"
-
-[scripts]
-ckeckkey = ["ckechkey.py"]
-list-inputs = ["list-inputs.py"]
+[project.scripts]
+mouse = "mouse:main"
+# ~~ckeckkey = "ckechkey.py"~~
+# 需要这样才行
+#list-inputs = "list-inputs:main"
 
 [project.urls]
 Homepage="https://github.com/calllivecn/keyboardmouse"
